# circadia

./: .env.example  .gitignore  GOALS.md  README.md  dashboard.py  main.py  plan.md  pyproject.toml
docs/: initialization.md  resources.md
src/circadia/: config.py
src/circadia/features/: __init__.py  activity.py  composite.py  sleep.py
src/circadia/fitbit/: __init__.py  auth.py  client.py
src/circadia/ml/: __init__.py  model.py  predict.py  train.py
src/circadia/pipeline/: __init__.py  fetcher.py  scheduler.py
src/circadia/storage/: __init__.py  duckdb.py
