[project]
name = "circadia"
version = "0.1.0"
description = "Health metrics pipeline: Fitbit → DuckDB → ML scoring"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Thomas Yee"}]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pytz>=2024.0",
    "schedule>=1.2.0",
    "pydantic-settings>=2.13.1",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["src/circadia"]

[tool.ruff]
line-length = 100

[tool.mypy]
python-version = "3.11"
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
